--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.example.checklist"
+        applicationId "com.wsr.checklist"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
