--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+
+    //fab
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
 }
