--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.EditCheckList"></activity>
+        <activity android:name=".view.EditCheckList"/>
         <activity android:name=".view.ShowContents" />
         <activity android:name=".view.MainActivity">
             <intent-filter>
