--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
 
     //fab
     implementation 'com.google.android.material:material:1.3.0-alpha03'
+
+    //preference
+    implementation 'androidx.preference:preference:1.1.1'
 }
