--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
 
     //snackBar
     implementation 'com.google.android.material:material:1.3.0-alpha03'
+
+    //coordinatorLayout
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 }
