--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.wsr.checklist"
+        applicationId "com.wsr.shopping_friend"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
