--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -74,7 +75,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     //preference
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     //navigation
     def nav_version = "2.3.0"
@@ -90,4 +91,11 @@ dependencies {
 
     //coordinatorLayout
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    //ads
+    implementation 'com.google.firebase:firebase-ads:19.4.0'
 }
