--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ buildscript {
         //safeargs
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
 
+        //ads
+        classpath 'com.google.gms:google-services:4.3.4'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
