--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: "androidx.navigation.safeargs.kotlin"
-apply plugin: 'com.google.gms.google-services'
+plugins{
+    id 'com.android.application'
+    id 'kotlin-android'
+
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.gms.google-services'
+}
 
 android {
     compileSdkVersion 30
@@ -33,6 +35,11 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    //ViewBindingを有効化
+    viewBinding {
+        enabled = true
     }
 }
 
