--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.wsr.shopping_friend"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 30
-        versionName "2.1.6"
+        versionCode 31
+        versionName "2.1.7"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -77,6 +77,7 @@ dependencies {
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
+    //RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
