--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,14 +52,14 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    def room_version = "2.2.6"
+    def room_version = "2.3.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -77,7 +77,7 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     //RecyclerView
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
     //ViewModelScope
@@ -108,5 +108,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     //ads
-    implementation 'com.google.firebase:firebase-ads:20.1.0'
+    implementation 'com.google.firebase:firebase-ads:20.2.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
 }
